# fire-collector-simulation

./: .gitignore  Fire.js  Object.ts  README.md  Robot.js  Robot.ts  index.html  package-lock.json  package.json  script.js  script.ts  sketch.js  sketch.ts  tsconfig.json  vite.config.js
assets/: index-BOBhGbwj.css  index-BP3EdOHn.js  index-CiECzVOP.js  index-DCDJ0x_u.js
public/wasm/: algo.js  algo.wasm
source/: Fire.ts  Object.ts  Robot.ts  script.ts
src/: Fire.ts  Object.ts  Robot.ts  Simulation.ts  Stats.ts  map.ts  script.ts  sketch.ts  style.css
wasm/: CMakeLists.txt  algo  algo.c  algo.h  algo.js  algo.wasm  definitions.h  flameColors.h  macros.h  test_bfs.c  test_pathfind.c  test_queue.c  test_stack.c  types.h  utils.c  utils.h
